# TinyTroupe

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODEBASE_ANALYSIS.md  Dockerfile  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  RESPONSIBLE_AI_FAQ.md  build_and_install_package_from_repo.bat  config.ini  extraction.json  extraction2.json  fake-gcp-credentials.json  installGcloud.sh  metro_schedule_feedback.json  pyproject.toml  restaurant_extraction.json  restaurant_extraction_old.json  simple_gemini_test.py  super_simple_test.py  test-report.html  test-results-2026-01-22.xml  test-results.xml  test_cases.py  test_cases_metro.py  test_cases_prostative.py  test_cases_restaurant.py  test_gcp_auth.py  test_gemini_handling.py  test_litellm_migration.py  test_litellm_vertex.py  test_mock_litellm.py  test_output.txt  test_param_handling.py  test_serialization.py  test_vertex_mock.py  teste.py
.github/: copilot-instructions.md
docs/: bugJson.md  index.html  migration.md
examples/: AI-enabled Children Story Telling Market Research 2.ipynb  Advertisement for TV.ipynb  Political Compass (customizing agents with fragments).ipynb  Product Brainstorming.ipynb  Story telling (long narratives).ipynb  advertisement_for_tv.ipynb  config.ini  create_ad_for_appartment.ipynb  creating_and_validating_agents.ipynb  interview_with_customer.ipynb  investment_firm.ipynb  litellm_migration_demo.py  online_advertisement_for_travel.ipynb  product_brainstorming.ipynb  simple_chat.ipynb  social_services_agency.ipynb  synthetic_data_generation.ipynb  synthetic_gen.py  test_proxy.py  wordprocessor_tool_usage.ipynb
go/: .gitignore  CLAUDE.md  INSTALL.md  MIGRATION_PLAN.md  (+5 more)
(+230 files in other folders)
